[metadata]
name = odesli-cli
version = 0.0.2
author = Fabian Thomas
author_email = fabian@fabianthomas.de
description = CLI client for the Odesli/Songlink API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fabian-thomas/odesli-cli
project_urls =
    Bug Tracker = https://github.com/fabian-thomas/odesli-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    odesli

[options.entry_points]
console_scripts =
    odesli-cli=odesli_cli.odesli_cli:main
